    group
  * release-name: Dates in release names (e.g. "2015-09-25"), are interpreted as
    episode air dates and used as default value for the usual "SxxExx"
  * IMDb: Remove "and" from query because searching for "Foo and Bar" doesn't
    find "Foo & Bar"
  * Improve finding of an appropriate screenshot source file from a VIDEO_TS
    directory (Thanks, L4G!)


2022.02.08
  * New option: config.torrent-create.reuse_torrent_paths provides a list of
    directories that contain torrent files from which to get piece hashes from
  * Improved scene detection for mixed season packs
  * "upsies --help" documents basic Emacs keybindings
  * torrent-create: Put created torrent file in current working directory


2022.01.15
  * Improved scene detection for season packs
  * Attempt to fix screenshot creation on Windows
  * bB: Less common sources can now be selected manually
  * bB: With --only-description, include screenshots and mediainfo for season
    and episode release


2021.12.12
  * Fix adding torrents to rTorrent <= 0.9.6


2021.12.09
  * Fix detection of interlaced MBAFF/PAFF video
  * Fix searching SrrDB for release names containing ","
  * Fix " not found in regex" printed to stdout


2021.12.04
  * Renamed options trackers.*.(add|copy)-to to trackers.*.(add|copy)_to for
    consistency with other option names (sorry for the inconvenience)
  * Added support for qBittorrent, rTorrent and Deluge
  * Try to make non-unique TV show titles unique by appending 2-letter country
    code (ccTLD) or year
  * submit/torrent-create: Added --reuse-torrent/-t option to get piece hashes
    from an existing torrent instead of hashing all the content (this happens
    automatically when torrents are created with upsies)
  * Configuration options are now better documented (upsies set -h)
  * bB: Submit automatically generated screenshots and mediainfo when a custom
    description is given for a season or episode submission with --description